--- a/src/main/webapp/templates/test.html
+++ b/src/main/webapp/templates/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 It's test page!!!
-<button class="btn btn-lg btn-primary">EXIT</button>
+<button class="btn btn-lg btn-primary" type="button">Button</button>
+
 </body>
 </html>
