--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../static/css/bootstrap.css" th:href="@{static/css/bootstrap.css}" />
-    <link rel="stylesheet" href="../static/css/cover.css" th:href="@{static/css/style.css}" />
+    <link rel="stylesheet" href="../static/css/cover.css" th:href="@{static/css/cover.css}" />
     <title>Регистрация</title>
 </head>
 <body>
