--- a/src/main/webapp/static/css/bootstrap.css
+++ b/src/main/webapp/static/css/bootstrap.css
@@ -6757,5 +6757,10 @@ button.close {
 /*# sourceMappingURL=bootstrap.css.map */
 
 .vertical-margin {
-  margin: 7px 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
