--- a/src/main/webapp/templates/settings.html
+++ b/src/main/webapp/templates/settings.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta th:include="/fragments/resources::head">
-    <title>Облако</title>
+    <title>Настройки</title>
 </head>
 <body>
 <div class="site-wrapper">
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div th:include="fragments/header::body"></div>
-            Страница пользователя!
+            Страница настроек!
         </div>
     </div>
 </div>
