--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <div class="masthead clearfix">
     <div class="inner">
         <h3 class="masthead-brand">CloudStorage</h3>
-        <ul class="nav masthead-nav">
+        <ul sec:authorize="!isAuthenticated()" class="nav masthead-nav">
             <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/info')} ? 'active')"><a th:href="@{/info}">Инфо</a></li>
-            <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/login')} ? 'active')"><a th:href="@{/login}">Войти</a></li>
             <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/registration')} ? 'active')"><a th:href="@{/registration}">Регистрация</a></li>
+            <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/login')} ? 'active')"><a th:href="@{/login}">Войти</a></li>
+        </ul>
+        <ul sec:authorize="isAuthenticated()" class="nav masthead-nav">
+            <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/home')} ? 'active')"><a th:href="@{/home}">Облако</a></li>
+            <li th:classappend="(${#strings.contains(#httpServletRequest.requestURI, '/settings')} ? 'active')"><a th:href="@{/settings}">Настройки</a></li>
+            <li><a th:href="@{/logout}">Выйти</a></li>
         </ul>
     </div>
 </div>
