--- a/src/main/webapp/templates/info.html
+++ b/src/main/webapp/templates/info.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:th="http://www.springframework.org/schema/data/jaxb"
-      layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta th:include="/fragments/resources::head">
     <title>Облачное хранилище</title>
@@ -11,7 +9,7 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div th:include="fragments/header::body"></div>
-            <div>Content!</div>
+            <div>Страница с информацией!</div>
             <div th:include="fragments/footer::body"></div>
         </div>
     </div>
