--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:th="http://www.springframework.org/schema/data/jaxb"
-      layout:decorator="layout">
+<html xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta th:include="/fragments/resources::head">
     <title>Регистрация</title>
