--- a/src/main/webapp/templates/home.html
+++ b/src/main/webapp/templates/home.html
@@ -9,7 +9,7 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div th:include="fragments/header::body"></div>
-            Страница пользователя!
+            Страница пользователя: <span th:text="${name}"></span>
         </div>
     </div>
 </div>
