--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta th:include="/fragments/resources::head">
     <title>Авторизация</title>
@@ -10,21 +9,19 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div th:include="fragments/header::body"></div>
-            <div sec:authorize="!isAuthenticated()">
+            <th:block th:if="${!isLogged}">
                 <div class="width-auth center-block">
                     <form autocomplete="off" action="#" th:action="@{/j_spring_security_check}" method="post">
                         <h2 class="text-center">Авторизация</h2>
-                        <input class="form-control input-lg vertical-margin" name="j_username" type="text"
-                               placeholder="Логин">
-                        <input class="form-control input-lg vertical-margin" name="j_password" type="password"
-                               placeholder="Пароль">
+                        <input class="form-control input-lg vertical-margin" name="j_username" type="text" placeholder="Логин">
+                        <input class="form-control input-lg vertical-margin" name="j_password" type="password" placeholder="Пароль">
                         <button class="btn btn-lg lg btn-primary btn-block">Войти</button>
                         <div class="row vertical-margin">
                             <a class="col-lg-12 text-right cursor-pointer" th:href="@{/recovery}">Забыли пароль?</a>
                         </div>
                     </form>
                 </div>
-            </div>
+            </th:block>
             <div th:include="fragments/footer::body"></div>
         </div>
     </div>
