--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -9,18 +9,21 @@
     <div class="site-wrapper-inner">
         <div class="cover-container">
             <div th:include="fragments/header::body"></div>
-            <div class="width-auth center-block" role="form">
-                <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}" method="post">
-                    <h2 class="text-center">Регистрация</h2>
-                    <input class="form-control input-lg vertical-margin" type="text" placeholder="Логин" th:field="*{name}">
-                    <input class="form-control input-lg vertical-margin" type="email" placeholder="E-mail" th:field="*{email}">
-                    <input class="form-control input-lg vertical-margin" type="password" placeholder="Пароль" th:field="*{password}">
-                    <button class="btn btn-lg lg btn-primary btn-block">Зарегистрироваться</button>
-                    <div class="row vertical-margin">
-                        <a class="col-md-12 text-right cursor-pointer" th:href="@{/recovery}">Забыли пароль?</a>
-                    </div>
-                </form>
-            </div>
+            <th:block th:if="${!isLogged}">
+                <div class="width-auth center-block" role="form">
+                    <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}"
+                          method="post">
+                        <h2 class="text-center">Регистрация</h2>
+                        <input class="form-control input-lg vertical-margin" type="text" placeholder="Логин" th:field="*{name}">
+                        <input class="form-control input-lg vertical-margin" type="email" placeholder="E-mail" th:field="*{email}">
+                        <input class="form-control input-lg vertical-margin" type="password" placeholder="Пароль" th:field="*{password}">
+                        <button class="btn btn-lg lg btn-primary btn-block">Зарегистрироваться</button>
+                        <div class="row vertical-margin">
+                            <a class="col-md-12 text-right cursor-pointer" th:href="@{/recovery}">Забыли пароль?</a>
+                        </div>
+                    </form>
+                </div>
+            </th:block>
             <div th:include="fragments/footer::body"></div>
         </div>
     </div>
