--- a/src/main/webapp/templates/fragments/footer.html
+++ b/src/main/webapp/templates/fragments/footer.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div class="mastfoot">
-    <div class="inner">
-        <p>Дипломный проект</p>
-    </div>
+<div class="text-lg-center font-footer">
+    <p>Дипломный проект <a href="#">Test</a></p>
 </div>
 </body>
 </html>
