--- a/src/main/webapp/templates/fragments/resources.html
+++ b/src/main/webapp/templates/fragments/resources.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{static/css/bootstrap.css}" />
-    <link rel="stylesheet" th:href="@{static/css/cover.css}" />
+
+    <link th:href="@{static/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{static/css/bootstrap-flex.min.css}" rel="stylesheet">
+    <link th:href="@{static/css/bootstrap-grid.min.css}" rel="stylesheet">
+    <link th:href="@{static/css/custom.css}" rel="stylesheet">
 </head>
 </html>
