--- a/src/main/webapp/templates/info.html
+++ b/src/main/webapp/templates/info.html
@@ -5,14 +5,12 @@
     <title>Облачное хранилище</title>
 </head>
 <body>
-<div class="site-wrapper">
-    <div class="site-wrapper-inner">
-        <div class="cover-container">
-            <div th:include="fragments/header::body"></div>
-            <div>Страница с информацией!</div>
-            <div th:include="fragments/footer::body"></div>
-        </div>
-    </div>
+<div th:include="fragments/header::body"></div>
+
+<div class="custom-container">Info!</div>
+
+<div class="footer-container-log">
+    <div th:include="fragments/footer::body"></div>
 </div>
 </body>
 </html>
