--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -5,26 +5,19 @@
     <title>Авторизация</title>
 </head>
 <body>
-<div class="site-wrapper">
-    <div class="site-wrapper-inner">
-        <div class="cover-container">
-            <div th:include="fragments/header::body"></div>
-            <th:block th:if="${!isLogged}">
-                <div class="width-auth center-block">
-                    <form autocomplete="off" action="#" th:action="@{/j_spring_security_check}" method="post">
-                        <h2 class="text-center">Авторизация</h2>
-                        <input class="form-control input-lg vertical-margin" name="j_username" type="text" placeholder="Логин">
-                        <input class="form-control input-lg vertical-margin" name="j_password" type="password" placeholder="Пароль">
-                        <button class="btn btn-lg lg btn-primary btn-block">Войти</button>
-                        <div class="row vertical-margin">
-                            <a class="col-lg-12 text-right cursor-pointer" th:href="@{/recovery}">Забыли пароль?</a>
-                        </div>
-                    </form>
-                </div>
-            </th:block>
-            <div th:include="fragments/footer::body"></div>
+<div th:include="fragments/header::body"></div>
+<div class="custom-container-form">
+    <form autocomplete="off" action="#" th:action="@{/j_spring_security_check}" method="post">
+        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" name="j_username">
+        <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" name="j_password">
+        <button class="btn btn-lg btn-block btn-primary">Войти</button>
+        <div class="row">
+            <div class="col-lg-12 text-lg-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
         </div>
-    </div>
+    </form>
+</div>
+<div class="footer-container-log">
+    <div th:include="fragments/footer::body"></div>
 </div>
 </body>
 </html>
