--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta th:include="/fragments/resources::head">
     <title>Регистрация</title>
 </head>
 <body>
-<div class="site-wrapper">
-    <div class="site-wrapper-inner">
-        <div class="cover-container">
-            <div th:include="fragments/header::body"></div>
-            <th:block th:if="${!isLogged}">
-                <div class="width-auth center-block" role="form">
-                    <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}"
-                          method="post">
-                        <h2 class="text-center">Регистрация</h2>
-                        <input class="form-control input-lg vertical-margin" type="text" placeholder="Логин" th:field="*{name}">
-                        <input class="form-control input-lg vertical-margin" type="email" placeholder="E-mail" th:field="*{email}">
-                        <input class="form-control input-lg vertical-margin" type="password" placeholder="Пароль" th:field="*{password}">
-                        <button class="btn btn-lg lg btn-primary btn-block">Зарегистрироваться</button>
-                        <div class="row vertical-margin">
-                            <a class="col-md-12 text-right cursor-pointer" th:href="@{/recovery}">Забыли пароль?</a>
-                        </div>
-                    </form>
-                </div>
-            </th:block>
-            <div th:include="fragments/footer::body"></div>
+<div th:include="fragments/header::body"></div>
+<div class="custom-container-form">
+    <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}" method="post">
+        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" th:field="*{name}">
+        <input class="form-control-lg form-control mb-1" type="email" placeholder="E-mail" th:field="*{email}">
+        <input class="form-control-lg form-control mb-1" type="datetime" placeholder="Дата рождения">
+        <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" th:field="*{password}">
+        <input class="form-control-lg form-control mb-1" type="password" placeholder="Повторите пароль">
+        <button class="btn btn-lg btn-block btn-primary">Зарегистрироваться</button>
+        <div class="row">
+            <div class="col-lg-12 text-lg-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
         </div>
-    </div>
+    </form>
+</div>
+<div class="footer-container-reg">
+    <div th:include="fragments/footer::body"></div>
 </div>
 </body>
 </html>
