--- a/src/main/webapp/templates/registration.html
+++ b/src/main/webapp/templates/registration.html
@@ -6,13 +6,18 @@
 </head>
 <body>
 <div th:include="fragments/header::body"></div>
+<th:block class="custom-container-form" th:if="${errors}">
+    <div class="text-lg-center" th:each="error : ${errors}">
+        <span th:text="${error.code}"></span>
+    </div>
+</th:block>
 <div class="custom-container-form">
     <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${accountForm}" method="post">
         <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" th:field="*{name}">
         <input class="form-control-lg form-control mb-1" type="email" placeholder="E-mail" th:field="*{email}">
         <input class="form-control-lg form-control mb-1" type="datetime" placeholder="Дата рождения">
         <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" th:field="*{password}">
-        <input class="form-control-lg form-control mb-1" type="password" placeholder="Повторите пароль">
+        <input class="form-control-lg form-control mb-1" type="password" placeholder="Повторите пароль" th:field="*{confirmPassword}">
         <button class="btn btn-lg btn-block btn-primary">Зарегистрироваться</button>
         <div class="row">
             <div class="col-lg-12 text-lg-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
