--- a/src/main/webapp/templates/cloud.html
+++ b/src/main/webapp/templates/cloud.html
@@ -8,10 +8,30 @@
 <div th:include="fragments/header::body"></div>
 
 <div class="custom-container">
-    <form method="POST" action="/cloud/save" enctype="multipart/form-data">
-        <input type="file" id="mfile" name="file">
-        <button class="btn btn-lg btn-primary">Загрузить</button>
+    <form class="form-inline row mb-1 ml-1" method="POST" action="/cloud/save" enctype="multipart/form-data">
+        <input class="offset-lg-2" type="file" id="mfile" name="file">
+        <div class="col-lg-1"></div>
+        <button class="btn btn-sm btn-custom"><img th:src="@{static/img/arrow-up.svg}"> Загрузить</button>
     </form>
+    <table class="table">
+        <tr>
+            <th>Название</th>
+            <th>Объем</th>
+            <th>Алгоритм</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td>Test.test</td>
+            <td>100Мб</td>
+            <td>AES</td>
+            <td class="text-lg-right">
+                <div class="btn-group">
+                    <button class="btn btn-sm btn-custom" type="button"><img th:src="@{static/img/arrow-down.svg}"></button>
+                    <button class="btn btn-sm btn-custom" type="button"><img th:src="@{static/img/remove.svg}"></button>
+                </div>
+            </td>
+        </tr>
+    </table>
 </div>
 
 <div class="custom-container">
