--- a/src/main/webapp/templates/fragments/resources.html
+++ b/src/main/webapp/templates/fragments/resources.html
@@ -8,6 +8,12 @@
     <link th:href="@{static/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{static/css/bootstrap-flex.min.css}" rel="stylesheet">
     <link th:href="@{static/css/bootstrap-grid.min.css}" rel="stylesheet">
+    <link th:href="@{static/css/bootstrap-reboot.min.css}" rel="stylesheet">
     <link th:href="@{static/css/custom.css}" rel="stylesheet">
+    <link th:href="@{static/css/jquery.formstyler.css}" rel="stylesheet">
+
+    <script th:src="@{static/js/jquery-3.1.1.min.js}"></script>
+    <script th:src="@{static/js/jquery.formstyler.min.js}"></script>
+    <script th:src="@{static/js/util.js}"></script>
 </head>
 </html>
