--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -8,8 +8,8 @@
 <div th:include="fragments/header::body"></div>
 <div class="custom-container-form">
     <form autocomplete="off" action="#" th:action="@{/j_spring_security_check}" method="post">
-        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" name="j_username">
-        <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" name="j_password">
+        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" required="required" name="j_username">
+        <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" required="required" name="j_password">
         <button class="btn btn-lg btn-block btn-primary">Войти</button>
         <div class="row">
             <div class="col-lg-12 text-lg-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
