--- a/src/main/webapp/templates/login.html
+++ b/src/main/webapp/templates/login.html
@@ -6,13 +6,15 @@
 </head>
 <body>
 <div th:include="fragments/header::body"></div>
-<div class="custom-container-form">
+<div class="custom-container">
     <form autocomplete="off" action="#" th:action="@{/j_spring_security_check}" method="post">
-        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" required="required" name="j_username">
-        <input class="form-control-lg form-control mb-1" type="password" placeholder="Пароль" required="required" name="j_password">
-        <button class="btn btn-lg btn-block btn-primary">Войти</button>
         <div class="row">
-            <div class="col-lg-12 text-lg-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="text" placeholder="Логин"
+                   required="required" name="j_username">
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
+                   placeholder="Пароль" required="required" name="j_password">
+            <button class="offset-md-2 col-md-8 btn btn-lg btn-block btn-primary">Войти</button>
+            <div class="offset-md-2 col-md-8 text-md-right"><a th:href="@{/recovery}">Забыли пароль?</a></div>
         </div>
     </form>
 </div>
