--- a/src/main/webapp/templates/settings.html
+++ b/src/main/webapp/templates/settings.html
@@ -6,14 +6,31 @@
 </head>
 <body>
 <div th:include="fragments/header::body"></div>
-
 <div class="custom-container">
     <form autocomplete="off" action="/settings/name" method="post">
-        <input class="form-control-lg form-control mb-1" type="text" placeholder="Логин" th:value="${account.name}" name="name">
-        <button class="btn btn-lg btn-block btn-primary">Изменить</button>
+        <div class="row">
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="text" placeholder="Логин"
+                   th:value="${account.name}" name="name">
+            <button class="offset-md-2 col-md-8 btn btn-lg btn-block btn-primary mb-2">Изменить</button>
+        </div>
     </form>
+    <form autocomplete="off" action="/settings/password" method="post">
+        <div class="row">
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
+                   placeholder="Текущий пароль" name="currentPassword">
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
+                   placeholder="Новый пароль" name="newPassword">
+            <input class="offset-md-2 col-md-8 form-control-lg form-control mb-1" type="password"
+                   placeholder="Повторите пароль" name="confirmPassword">
+            <button class="offset-md-2 col-md-8 btn btn-lg btn-block btn-primary mb-2">Изменить</button>
+        </div>
+    </form>
+    <a th:href="'/settings/delete/' + ${account.id}">
+        <div class="row">
+            <button class="offset-md-2 col-md-8 btn btn-lg btn-block btn-danger">Удалить аккаунт</button>
+        </div>
+    </a>
 </div>
-
 <div class="custom-container">
     <div th:include="fragments/footer::body"></div>
 </div>
