--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<div class="masthead clearfix">
+<div class="clearfix">
     <div class="custom-container">
         <div class="navbar edit-padding">
             <h3 class="navbar-brand"><img src="../../static/img/server.svg" th:src="@{static/img/server.svg}"> CloudStorage</h3>
