--- a/src/main/webapp/templates/info.html
+++ b/src/main/webapp/templates/info.html
@@ -9,7 +9,7 @@
 
 <div class="custom-container">Info!</div>
 
-<div class="footer-container-log">
+<div class="footer-container">
     <div th:include="fragments/footer::body"></div>
 </div>
 </body>
